--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://claudiarreyes.github.io/"
 languageCode = "en-us"
-title = "*"
+title = "claudia.reyes@anu.edu.au"
 description = "Research Projects by Claudia Reyes"
 theme = "ananke"
 
